# grabcut-apply-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: grabcut.hpp  grabcut_ref.cpp  main.cpp
